--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0",
     "prettier-eslint": "^12.0.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
