--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-eslint": "^12.0.0"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2"
   }
 }
